<resources>
    <string name="app_name">GO SOPT Android</string>

    <!-- message -->
    <string name="unregistered_user_error_msg">등록되지 않은 유저입니다.</string>
    <string name="sign_up_success_msg">회원가입이 완료되었습니다.</string>
    <string name="login_success_msg">로그인에 성공했습니다.</string>
    <string name="incorrect_input_error_msg">아이디 또는 비밀번호가 일치하지 않습니다.</string>
    <string name="invalid_input_error_msg">유효한 값을 입력해주세요.</string>
    <string name="gallery_follower_list_null_msg">팔로워가 존재하지 않습니다.</string>
    <string name="network_error_msg">서버 통신에 문제가 발생했습니다.</string>
    <string name="id_duplicate_error_msg">이미 등록된 유저입니다.</string>
    <string name="home_get_repo_list_fail_msg">데이터 조회에 실패했습니다.</string>

    <!-- login -->
    <string name="login_welcome_msg">Welcome to GO Android!</string>
    <string name="login_id_label">ID</string>
    <string name="login_id_hint">6~10자리 이내의 아이디를 입력하세요.</string>
    <string name="login_pw_label">Password</string>
    <string name="login_pw_hint">6~12자리 이내의 비밀번호를 입력하세요.</string>
    <string name="login_btn_text">Login</string>
    <string name="sign_up_start_btn_text">Sign Up</string>

    <!-- sharedPreferences -->
    <string name="prefs_id_key">id</string>
    <string name="prefs_pw_key">pw</string>
    <string name="prefs_name_key">name</string>
    <string name="prefs_hobby_key">hobby</string>

    <!-- signup -->
    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_id_label">ID</string>
    <string name="sign_up_id_err">* 6~10글자 이내만 허용</string>
    <string name="sign_up_id_hint">아이디를 입력하세요.</string>
    <string name="sign_up_pw_label">Password</string>
    <string name="sign_up_pw_err">* 8~12글자 이내만 허용</string>
    <string name="sign_up_pw_hint">비밀번호를 입력하세요.</string>
    <string name="sign_up_name_label">Name</string>
    <string name="sign_up_name_hint">이름을 입력하세요.</string>
    <string name="sign_up_hobby_label">Hobby</string>
    <string name="sign_up_hobby_hint">취미를 입력하세요.</string>
    <string name="sign_up_finish_btn_text">Sign Up</string>

    <string name="sign_up_id_helper_text">영문, 숫자를 포함한 6~10글자</string>
    <string name="sign_up_pw_helper_text">영문, 숫자, 특수문자를 포함한 6~12글자</string>
    <string name="sign_up_required_input_err">필수 입력</string>
    <string name="sign_up_special_char_notice">※ 허용되는 특수 문자: !, @, #, $, %, ^, +, -, =</string>

    <!-- main -->
    <string name="repo_name_preview">레포지토리 이름</string>
    <string name="repo_author_preview">레포지토리 주인</string>
    <string name="header_text_preview">Repository List</string>
    <string name="header_text">Repository List</string>

    <string name="home_menu">Home</string>
    <string name="gallery_menu">Gallery</string>
    <string name="search_menu">Search</string>
    <string name="mypage_menu">MyPage</string>
    <string name="binding_error_msg">Binding not initialized to reference the view.</string>

    <string name="mypage_name">이름:&#160;%s</string>
    <string name="mypage_hobby">취미:&#160;%s</string>
    <string name="mypage_name_preview">이름:</string>
    <string name="mypage_hobby_preview">취미:</string>
    <string name="logout_btn_text">Logout</string>
    
    <string name="dialog_logout_msg">로그아웃 하시겠습니까?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="follower_name_preview">Haeun Lee</string>
    <string name="follower_email_preview">jxlhe46@gmail.com</string>
    <string name="item_repo_desc">repo image</string>
    <string name="item_follower_desc">follower image</string>
    <string name="follower_list_header">Follower List</string>
    <string name="loading_dialog_message">Please Wait. Loading …</string>
    <string name="mypage_logout_dialog_message">로그아웃 하시겠습니까?</string>
    <string name="mypage_logout_cancel_button_text">Cancel</string>
    <string name="mypage_logout_yes_button_text">Yes</string>
</resources>