<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.signup.SignUpActivity">

    <data>

        <variable
            name="vm"
            type="org.android.go.sopt.presentation.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up_title"
            android:textAppearance="?textAppearanceDisplayLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up_id_label"
            android:textAppearance="?textAppearanceHeadlineMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="@{vm.MAX_ID_LENGTH}"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_id_hint"
                android:inputType="text"
                android:maxLength="@{vm.MAX_ID_LENGTH}"
                android:singleLine="true"
                android:text="@={vm._id}"
                android:textAppearance="?textAppearanceBodySmall" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up_pw_label"
            android:textAppearance="?textAppearanceHeadlineMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_id" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="@{vm.MAX_PW_LENGTH}"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pw">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_pw_hint"
                android:inputType="textPassword"
                android:maxLength="@{vm.MAX_PW_LENGTH}"
                android:singleLine="true"
                android:text="@={vm._pw}"
                android:textAppearance="?textAppearanceBodySmall" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_special_char_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up_special_char_notice"
            android:textAppearance="@style/TextAppearance.GOSOPTAndroid.LabelLarge"
            app:layout_constraintStart_toStartOf="@id/til_pw"
            app:layout_constraintTop_toBottomOf="@id/til_pw" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up_name_label"
            android:textAppearance="?textAppearanceHeadlineMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_special_char_notice" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/sign_up_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:text="@={vm._name}"
                android:textAppearance="?textAppearanceBodySmall" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_hobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up_hobby_label"
            android:textAppearance="?textAppearanceHeadlineMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_hobby"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/sign_up_hobby_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hobby">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_hobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:text="@={vm._hobby}"
                android:textAppearance="?textAppearanceBodySmall" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:onClick="@{()->vm.signUp()}"
            android:padding="14dp"
            android:text="@string/sign_up_finish_btn_text"
            android:textAppearance="?textAppearanceBodyLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
