<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="org.android.go.sopt.presentation.main.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_white_fill_20_rect"
            android:layout_marginHorizontal="24dp"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_logout_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mypage_logout_dialog_message"
                android:textAppearance="@style/TextAppearance.GOSOPTAndroid.HeadLineMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_logout_title">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mypage_logout_cancel_button_text"
                    android:textAppearance="@style/TextAppearance.GOSOPTAndroid.BodyLarge"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_confirm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/mypage_logout_yes_button_text"
                    android:textAppearance="@style/TextAppearance.GOSOPTAndroid.BodyLarge"
                    app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_cancel"
                    app:layout_constraintTop_toTopOf="@id/btn_cancel" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>